# k9-haskell

./: CHANGELOG.md  EXPLAINME.adoc  Justfile  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  README.md  ROADMAP.adoc  Setup.hs  TEST-NEEDS.md  TOPOLOGY.md  eclexiaiser.toml  k9-haskell.cabal  k9iser.toml  llm-warmup-dev.md  llm-warmup-user.md  selur-compose.toml  setup.sh  stapeln.toml
.machine_readable/: ADJUST.contractile  CLADE.a2ml  INTENT.contractile  MUST.contractile  TRUST.contractile
.machine_readable/6a2/: ECOSYSTEM.a2ml  STATE.a2ml
.machine_readable/contractiles/bust/: Bustfile.a2ml
contractiles/intend/: Intentfile.a2ml
contractiles/must/: Mustfile.a2ml
contractiles/trust/: Trustfile.a2ml
src/Data/: K9.hs
src/Data/K9/: Parser.hs  Renderer.hs  Types.hs
