-- SPDX-License-Identifier: MPL-2.0
-- (PMPL-1.0-or-later preferred; MPL-2.0 required for Hackage OSI-approved policy)
--
-- k9-haskell.cabal — Cabal package description for the k9 library.

cabal-version:       2.4
name:                k9
version:             0.1.0.0
synopsis:            Parser and renderer for K9 (Self-Validating Components)
description:
    A Haskell library for parsing and rendering K9 self-validating component
    specifications. K9 is a format that embeds security levels, pedigree
    metadata, build recipes, and validation checksums directly in the document.
    .
    Features:
    .
    * Parse @.k9@ (YAML-like) and @.k9.ncl@ (Nickel) files into a typed AST
    * Render the AST back to K9 surface syntax
    * Data types for components, pedigrees, security levels (Kennel\/Yard\/Hunt),
      recipes, and contracts
    * Round-trip fidelity for the YAML-like variant

license:             MPL-2.0
license-file:        LICENSE-MPL-2.0
author:              Jonathan D.A. Jewell
maintainer:          j.d.a.jewell@open.ac.uk
copyright:           Copyright (c) 2026 Jonathan D.A. Jewell (hyperpolymath)
category:            Text, Data, Security
build-type:          Simple
homepage:            https://github.com/hyperpolymath/k9-haskell
bug-reports:         https://github.com/hyperpolymath/k9-haskell/issues
extra-doc-files:     CHANGELOG.md
extra-source-files:  README.adoc

source-repository head
    type:     git
    location: https://github.com/hyperpolymath/k9-haskell.git

library
    exposed-modules:
        Data.K9
        Data.K9.Types
        Data.K9.Parser
        Data.K9.Renderer
    build-depends:
        base       >= 4.14 && < 5,
        text       >= 1.2  && < 2.2,
        containers >= 0.6  && < 0.8,
        bytestring >= 0.10 && < 0.13
    hs-source-dirs:   src
    default-language:  Haskell2010
    ghc-options:       -Wall -Wcompat -Widentities -Wincomplete-record-updates
                       -Wincomplete-uni-patterns -Wredundant-constraints
